syntax changed to ES6 - observer pattern

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script defer src="stopwatch-cls-syntax.js"></script>
     <title>Online Stopwatch</title>
 </head>
 <body>
     <div id="sw">
-        <span id="sw-screen">0.00</span>
+        <span id="sw-display">0.00</span>
         <div id="buttons">
             <button type="submit" id="btnStart" class="btn">Start</button>
-            <button type="submit" id="btnStop" class="btn">Stop</button type="submit">
-            <button type="submit" id="btnReset" class="btn">Reset</button type="submit">
+            <button type="submit" id="btnStop" class="btn">Stop</button>
+            <button type="submit" id="btnReset" class="btn">Reset</button>
         </div>
     </div>
 </body>
-<script src="stopwatch.js"></script>
 </html>
